--- a/src/styles/auth.module.scss
+++ b/src/styles/auth.module.scss
@@ -38,15 +38,28 @@
   align-items: center;
 }
 
-@include on-device(mobile) {
-  .authFields {
-    margin-right: 3rem;
-    width: 65%;
-  }
-}
 @include on-device(large-tablet) {
   .authFields {
-    margin-right: 4rem;
-    width: 60%;
+    margin-right: 10%;
+    width: 50%;
+  }
+}
+@include on-device(mobile) {
+  .authFields {
+    margin-right: 0;
+    width: 65%;
+  }
+
+  .authForm {
+    justify-content: center;
+    background-color: rgba($primary, 0.2);
+  }
+
+  .authInput,
+  .authButton,
+  .authLink,
+  .authDescription {
+    border-color: $white !important;
+    color: $white !important;
   }
 }
