--- a/src/pages/Home/home.module.scss
+++ b/src/pages/Home/home.module.scss
@@ -1,3 +1,11 @@
+@import "/src/styles/mixins";
+
 .homePage {
   margin: 0 -10rem;
+}
+
+@include on-device(mobile) {
+  .homePage {
+    margin: 0 !important;
+  }
 }
